Fix item alignment for content div

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -16,7 +16,6 @@ img {
 
 .content {
   display: flex;
-  align-items: center;
   justify-content: center;
   gap: 52px;
 }
